# iron-lang

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  build-time-baseline.json
editors/zed/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  extension.toml
editors/zed/languages/iron/: config.toml
editors/zed/src/: lib.rs
editors/zed/test/dev-load/: diag_error_test.rs
editors/zed/test/mocks/: mock_release.rs
tests/fuzz/: CMakeLists.txt  fuzz_hir_to_lir.c  fuzz_parser.c  fuzz_typecheck.c  iron.dict  iron_gen.c  iron_gen.h  seed_blobs.c
tests/fuzz/corpus/parser/: parser_interface_decl_recovery.iron
tests/fuzz/lsp/: CMakeLists.txt  README.md
tests/fuzz/lsp/didChange/: fuzz_target.c
tests/fuzz/lsp/dispatch/: fuzz_target.c  handler_stubs.c
tests/fuzz/lsp/frame/: fuzz_target.c
tests/fuzz/lsp/json/: fuzz_target.c
tests/grammars/: CMakeLists.txt
tests/grammars/textmate/: package.json  redos_check.js  snapshot.test.js
tests/grammars/textmate/fixtures/: comments.iron  comments.iron.expected-scopes  control_flow.iron  control_flow.iron.expected-scopes  decl_enum.iron  decl_enum.iron.expected-scopes  decl_func.iron  decl_func.iron.expected-scopes  decl_interface.iron  decl_interface.iron.expected-scopes  decl_object.iron  decl_object.iron.expected-scopes  literals.iron  literals.iron.expected-scopes  match_expr.iron  match_expr.iron.expected-scopes  operators.iron  operators.iron.expected-scopes  strings.iron  strings.iron.expected-scopes
tests/grammars/tree_sitter/: parse_fixtures.sh  run_corpus.sh
tests/hir/: CMakeLists.txt  test_hir_data.c  test_hir_lower.c  test_hir_print.c  test_hir_to_lir.c  test_hir_verify.c
tests/hir/snapshots/: closures_concurrency.txt  control_flow.txt  simple_func.txt
tests/lir/: CMakeLists.txt  test_lir_data.c  test_lir_emit.c  test_lir_lower.c  test_lir_optimize.c  test_lir_print.c  test_lir_verify.c
tests/lir/snapshots/: control_flow.expected  function_call.expected  memory_ops.expected  mutable_var.expected  object_construct.expected  string_interp.expected
tests/lsp/: CMakeLists.txt
tests/lsp/fixtures/: bom.iron  combining.iron  crlf.iron  hello.iron  surrogate.iron  symbol_id_v2_baseline.txt
tests/lsp/fixtures/nav/: doc_comment_corpus.iron
tests/lsp/fixtures/printer_v2_baseline/: adt_else_arm.printed  adt_enum_construct.printed  adt_enum_decl.printed  adt_enum_method.printed  adt_match_syntax.printed  adt_mixed_payload.printed  adt_nested_pattern.printed  adt_pattern_binding.printed  adt_plain_enum_method.printed  adt_recursive_expr.printed  adt_recursive_generic.printed  adt_recursive_list.printed  adt_wildcard_pattern.printed  arena_cross_arena_fix.printed  arena_split_collection.printed  args_threading.printed  array_param_passing.printed  audit_for_array_of_structs.printed  audit_pfor_boundary_range.printed  audit_pfor_variable_range.printed  audit_struct_chain_passing.printed  audit_struct_method_mutation.printed  binary_literal.printed  bitwise_and_or_xor.printed  (+337 more)
tests/lsp/fmt/: CMakeLists.txt
tests/lsp/invariant/: CMakeLists.txt  test_crash_dump_written.sh  test_parent_death_detection.sh  test_phase7_audit.sh  test_rss_cap_trips_exit_42.sh  test_version_stamp_coherence.sh
tests/lsp/parity/: CMakeLists.txt  printer_baseline_capture.c  test_parity_ironc_lsp.c  test_parity_ironc_lsp_fmt.c  test_parity_v3_print_fixed_point.c
tests/lsp/slos/: README.md  gen_large.py  measurement.py
tests/lsp/smoke/: CMakeLists.txt  conftest.py  requirements.txt  test_cancel.py  test_debounce.py  test_did_change_publishes.py  test_hard_refuse_v3.py  test_init_encoding.py  test_initialize.py  test_iron_migrate_command.py  test_lifecycle.py  test_log_file.py  test_parent_death.py  test_pull_diagnostics.py  test_watched_files.py
tests/lsp/soak/: README.md  gen_fixtures.py  gen_workload.py  harness.py  short.jsonl  workload.jsonl
tests/lsp/tsan/: README.md  driver.py  gen_workload.py  suppressions.txt  workload.jsonl
tests/lsp/unit/: CMakeLists.txt  test_ast_sealed.c  test_dep_map.c  test_document_symbol.c  test_fuzzy_matcher.c  test_hover_formatter.c  test_iface_workspace.c  test_lexer_doc_comment.c  test_lexer_doc_comment_parity.c  test_lsp_build_smoke.c  test_lsp_cancel_request_e2e.c  test_lsp_diagnostic_debounce.c  test_lsp_document_sync_corpus.c  test_lsp_dynamic_registration.c  test_lsp_frame.c  test_lsp_initialize_capabilities.c  test_lsp_json.c  test_lsp_lifecycle_fsm.c  test_lsp_line_starts_index.c  test_lsp_log_path_xdg.c  test_lsp_mailbox_coalesce.c  test_lsp_position_encoding_negotiation.c  test_lsp_pull_diagnostics.c  test_lsp_sigabrt_boundary.c  test_lsp_sigpipe_shutdown.c  test_lsp_sync_integrity_hash.c  test_lsp_utf_translation.c  test_lsp_watched_files.c  test_lsp_writer_queue.c  test_nav_definition.c  test_nav_references.c  test_node_at.c  test_signature_help.c  test_stdlib_cache.c  test_symbol_id.c  test_type_hierarchy.c  test_v3_keyword_drift.c  test_v3_keyword_filter.c  test_v3_node_at.c  test_v3_patch_completion.c  (+20 more)
tests/unit/: CMakeLists.txt  test_alloc_list_push_oom.c  test_alloc_map_put_oom.c  test_analyze_buffer_basic.c  test_analyze_buffer_mode_lsp.c  test_analyzer_errornode.c  test_analyzer_no_short_circuit.c  test_arena.c  test_arena_scoping_stress.c  test_asset_path.c  test_cancel_latency.c  test_codeaction_registry.c  test_completion_auto_import.c  test_completion_buckets.c  test_completion_context_classify.c  test_completion_keyword_mirror.c  test_completion_snippets.c  test_comptime.c  test_concurrency.c  test_cov_compiler_printers.c  test_cov_runtime_string_oom.c  test_cov_stdlib_io.c  test_diag_suggestion_seeded.c  test_document_highlight.c  test_emit_web.c  test_escape.c  test_fmt_format_source_unit.c  test_fmt_idempotency_corpus.c  test_fmt_on_type_block_finder.c  test_fmt_options_defaults.c  test_fmt_options_honored.c  test_fmt_options_parse.c  test_fmt_range_locator.c  test_folding_range.c  test_help_registry.c  test_init_check.c  test_lexer.c  test_missing_return.c  test_organize_imports.c  test_parity_ironc_lsp_suggestions.c  (+39 more)
(+2581 files in other folders)
